manifests/webhook/csi-injector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csi-injector-svc
  name: csi-injector
  namespace: spire
spec:
  ports:
  - name: https 
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: csi-injector
  type: ClusterIP
status:
  loadBalancer: {}
