manifests/webhook/mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "csi-injector-webhook.omegahome.net"
webhooks:
  - name: "csi-injector.spire.svc.cluster.local"
    namespaceSelector:
      matchLabels:
        csi-webhook: enabled
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: spire
        name: csi-injector
        path: /mutate
        port: 8443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lJZjduUDFRZm5I
[...]
        LS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
